--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 01 / 31</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 01</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,10 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">记忆力会顺从我们的心意衰退，让大部分人得以平静地活下去。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 01 / 31</span>
-            <img src="http://image.wufazhuce.com/Fqscix1WN7_ci_-mxLTk3aACR_Cv" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">乍暖还寒二月天，酿红酝绿斗新鲜。
+日烘春色成和气，风弄花香作瑞烟。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 01</span>
+            <img src="http://image.wufazhuce.com/FoPsPkqVC2evcDE05TWrNIVWBqBL" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
