--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 01</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 02</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,10 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">乍暖还寒二月天，酿红酝绿斗新鲜。
-日烘春色成和气，风弄花香作瑞烟。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 01</span>
-            <img src="http://image.wufazhuce.com/FoPsPkqVC2evcDE05TWrNIVWBqBL" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">白天比黑夜更可怕。晚上的游戏比白天的好得多。晚上，你可以隐身，穿过屋顶，冲向需要你的地方。而在白天，你无法隐身。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 02</span>
+            <img src="http://image.wufazhuce.com/Fsye_1GCyyrZMpVIkA6hZFj-mo_8" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
