--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 02</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 03</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">白天比黑夜更可怕。晚上的游戏比白天的好得多。晚上，你可以隐身，穿过屋顶，冲向需要你的地方。而在白天，你无法隐身。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 02</span>
-            <img src="http://image.wufazhuce.com/Fsye_1GCyyrZMpVIkA6hZFj-mo_8" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">那些被选中来到这个世界上的人，再也无法回到他的来处，因为他要尝遍这世上的冷暖甘苦。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 03</span>
+            <img src="http://image.wufazhuce.com/Fg7VMTIEUxiqjKOQ7GOBWD2u1P_M" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
