--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 04</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 05</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,10 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">律回岁晚冰霜少，春到人间草木知。
-便觉眼前生意满，东风吹水绿参差。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 04</span>
-            <img src="http://image.wufazhuce.com/FlIWFkRjRZ9kK8VS28HxMCjVt3cu" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">噪声有了意义，就变成了音乐；颜色有了意义，就变成了绘画；人生有了意义，就变成了故事。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 05</span>
+            <img src="http://image.wufazhuce.com/FkHslubwOJWEXe99YmGztxJLdRuF" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
