--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 08</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 09</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,12 +20,10 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">每个游子心里都藏着一张返程票，上面印着故乡的坐标。远行有多远，对归途的想象就有多清晰。有人带回满身风霜，有人卸下城市伪装，在熟悉的方言里，当远行的自我与静止的故土重逢，那些碰撞出的释然与重建，才是归途最真实的样貌。
-
-本周，ONE与你一同关注游子归乡的故事。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 08</span>
-            <img src="http://image.wufazhuce.com/FklJRlpy95vKqlyLMiQhB6OyI06v" style="width: 100%; margin-top: 10px;" alt="">
-            <span style="color: #b0b0b0; font-size:13px">周日推荐 </span>
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">不要因为有人碰巧表现出了最轻微的兴趣，就急着交出自己的全部。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 09</span>
+            <img src="http://image.wufazhuce.com/FrLKzLjN7HuYGY3E3bETYicJegSQ" style="width: 100%; margin-top: 10px;" alt="">
+            <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
 </html>
