--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 10</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 11</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">或许热爱生活却不严肃地对待生活是种罪孽。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 10</span>
-            <img src="http://image.wufazhuce.com/FiKGu1YARmv_f6hSgmgkjVjrQgN7" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">年少时，我们以为可以把幸福推迟一些，以为总会遇到幸福，这种想法真是疯狂！</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 11</span>
+            <img src="http://image.wufazhuce.com/Fny-qimGS5C-AY2DW0dU_KJaYKrm" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
