--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 14</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 02 / 15</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">爱上一个人总是无法控制的。它像百日咳一样来了又去。但如果只有一方付出爱是没有用的。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 14</span>
-            <img src="http://image.wufazhuce.com/FvUYrCcdxNyEWhwAQSQ4qzISorND" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">任何东西只要是听不懂了，那就显得高深起来了。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 02 / 15</span>
+            <img src="http://image.wufazhuce.com/Fuu7vledi1Gmv-RCcT2XY3ki1wT9" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
